# LINAL-assessment

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Bullet.cpp  Bullet.h  CustomView.cpp  CustomView.h  Game.cpp  Game.h  Matrix.cpp  Matrix.h  MyMesh.cpp  MyMesh.h  Player.cpp  Player.h  PulseController.cpp  PulseController.h  Target.cpp  Target.h  Vector.cpp  Vector.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  main.cpp  vmath.cpp  vmath.h
tests/: CMakeLists.txt  matrix.test.cpp  std-vector.test.cpp  vector.test.cpp
